Gap fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -413,7 +413,6 @@ fieldset legend {
     align-items: center;
     justify-content: center;
     text-align: center;
-    gap: 30px;
 }
 
 .advantage--first,
